1.6.12: 
 * Added a "start a new discussion" link to each discussion forum page.
 * Updated Luminotes Server INSTALL file with instructions for setting the
   http_url configuration setting.

1.6.11: April 28, 2009
 * Rewrote the way that the toolbar is implemented, laying the groundwork for
   themes in a subsequent release.
 * Changed some of the "+" buttons to be more descriptive: "+ notebook" and
   "+ note link".
 * Moved search field up above "notes" heading.
 * Fixed a bug in which toolbar buttons didn't depress based on the current
   location of the text cursor.
 * Fixed a bug in which discussion forum bylines ("Posted by...") were
   sometimes duplicated several times on a given post. Now bylines are
   displayed below each post rather than within it.
 * Fixed a Firefox bug in which removing some bold text and then typing new
   text would make the new text bold. Now, if you completely remove some bold
   text (rather than just a portion of it), any new text that you type will be
   unformatted.
 * Fixed a Firefox bug in which copying and pasting text between notes
   inserted line breaks in the pasted text.

1.6.10: March 20, 2009
 * Faster uploads and downloads for users of luminotes.com.
 * Luminotes Server improvements:
   * Fixed a bug in examples/luminotes_debian_initscript that prevented the
     "stop" command from working properly.
   * Added support for using the nginx web server with Luminotes. See the
     INSTALL file for more information.
 * Fixed a problem in which copying and pasting text containing newlines
   caused the pasted newlines to appear as spaces.

1.6.9: March 16, 2009
 * Added a remove formatting feature to the tools menu. This allows you to
   strip out all formatting from the currently selected text.
 * Luminotes discussion forums now change the discussion thread link color
   based on whether there are any new posts since you last visited the
   thread. This makes it much easier to keep up with a particular discussion.