@@ -1,4 +1,5 @@
 1.6.12: 
+ * Added a toolbar color button for setting text and background colors.
  * Added a "start a new discussion" link to each discussion forum page.
  * Updated Luminotes Server INSTALL file with instructions for setting the
    http_url configuration setting.
